src/test/deca/codegen/valid/notprovided/print_all.deca
{ int a; float b; boolean c; 
a = 10; b = 2.5; c = true;
print(a);
print(b);
print(c);
}