src/test/deca/codegen/invalid/or_int_nonattendu.deca
// Resultats :
// Erreur attendue : type booléen attendu
{
    int a = 0;
    float b = 1.0;
    boolean c = a || b;
}